# ogre-glvl

./: .gitignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  CMakeSettings.json  README  README.md  index.md  vcpkg.json
CMake/: Dependencies.cmake
CMake/Utils/: PrecompiledHeader.cmake
Components/: CMakeLists.txt
Components/Bites/: CMakeLists.txt
Components/Bites/src/: OgreWIN32ConfigDialog.cpp
Components/Overlay/include/: OgreUTFString.h
Components/Overlay/src/: OgreUTFString.cpp
OgreMain/include/: OgreNode.h  OgreSkeleton.h
OgreMain/src/: OgreEntity.cpp  OgreLodStrategy.cpp  OgreMesh.cpp  OgreRenderSystem.cpp  OgreResourceGroupManager.cpp  OgreResourceManager.cpp  OgreSkeleton.cpp  OgreTextureUnitState.cpp  OgreVertexIndexData.cpp
PlugIns/: CMakeLists.txt
RenderSystems/: CMakeLists.txt
RenderSystems/Direct3D11/: CMakeLists.txt
RenderSystems/Direct3D11/include/: OgreD3D11Prerequisites.h
RenderSystems/Direct3D9/: CMakeLists.txt
RenderSystems/Direct3D9/src/: OgreD3D9Device.cpp  OgreD3D9HardwareBuffer.cpp  OgreD3D9RenderSystem.cpp  OgreD3D9RenderWindow.cpp
